[package]
name = "portless-contracts"
version = "1.0.2"
edition = "2021"
rust-version = "1.76"
license = "Elastic-2.0"
build = "build.rs"
include = [
  "build.rs",
  "Cargo.toml",
  "proto/portless/v1/control.proto",
  "src/lib.rs",
]

[dependencies]
prost = "0.13"
tonic = { version = "0.12", default-features = false, features = ["codegen", "prost", "transport"] }

[build-dependencies]
protoc-bin-vendored = "3"
tonic-build = "0.12"
