[package]
name = "portless-contracts"
version = "1.0.3"
edition = "2021"
rust-version = "1.95"
license = "Elastic-2.0"
build = "build.rs"
include = [
  "build.rs",
  "Cargo.toml",
  "proto/portless/v1/control.proto",
  "src/lib.rs",
]

[dependencies]
prost = "0.14"
tonic = { version = "0.14.6", default-features = false, features = ["codegen", "transport"] }
tonic-prost = "0.14.6"

[build-dependencies]
protoc-bin-vendored = "3"
tonic-prost-build = "0.14.6"
